--- a/src/styles/globalstyles.scss
+++ b/src/styles/globalstyles.scss
@@ -1,4 +1,5 @@
 :root {
+  --font-primary: "Inter", sans-serif;
   --color-primary: #ff577f;
   --color-primary-focus: #ff427f;
   --color-primary-negative: #59323f;
@@ -7,4 +8,8 @@
   --grey-2: #343b41;
   --grey-3: #212529;
   --grey-4: #121214;
+}
+
+body {
+  background-color: #121214;
 }
