--- a/src/components/Inputs/style.module.scss
+++ b/src/components/Inputs/style.module.scss
@@ -1,5 +1,6 @@
 .inputBox {
   input {
+    margin-top: 11px;
     width: 100%;
     font-family: var(--font-primary);
     padding: 0 16px;
@@ -7,6 +8,7 @@
     font-size: 1.0156rem;
     font-weight: 400;
     color: var(--grey-0);
+    background-color: var(--grey-2);
 
     &::placeholder {
       color: var(--grey-1);
