--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -21,9 +21,10 @@
     background-color: var(--color-primary-negative);
     border: 1px solid var(--color-primary-negative);
     color: #ffff;
+    margin-top: 18px;
 
     &:hover {
-      filter: brightness(1.2);
+      filter: brightness(1.1);
     }
   }
 
@@ -31,9 +32,10 @@
     background-color: var(--color-primary);
     border: 1px solid var(--color-primary);
     color: #ffff;
+    margin-top: 18px;
 
     &:hover {
-      filter: brightness(1.2);
+      filter: brightness(1.1);
     }
   }
 
@@ -41,6 +43,11 @@
     background-color: var(--grey-1);
     border: 1px solid var(--grey-1);
     color: var(--grey-0);
+    margin-top: 12px;
+
+    &:hover {
+      filter: brightness(1.1);
+    }
   }
 }
 
@@ -54,11 +61,19 @@
 
   &.logout {
     padding: 0 16px;
-    height: 32px;
+    height: 2rem;
+
+    &.hover {
+      filter: brightness(1.1);
+    }
   }
 
   &.returnToLogin {
     padding: 0 16px;
-    height: 40px;
+    height: 2.5rem;
+
+    &.hover {
+      filter: brightness(1.1);
+    }
   }
 }
