--- a/src/components/Select/style.module.scss
+++ b/src/components/Select/style.module.scss
@@ -11,5 +11,8 @@
     background-color: var(--grey-2);
     border-radius: 0.25rem;
     border: 1px solid var(--grey-2);
+    &:disabled {
+      opacity: 0.5;
+    }
   }
 }
