--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -18,6 +18,10 @@
   width: 100%;
   @extend %buttonDefaults;
 
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
   &.signup {
     background-color: var(--color-primary-negative);
     border: 1px solid var(--color-primary-negative);
