--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -4,3 +4,10 @@
   font-weight: 400;
   color: var(--grey-0);
 }
+
+.headerForms {
+  font-family: var(--font-primary);
+  font-weight: 700;
+  font-size: 1.125rem;
+  color: var(--grey-0);
+}
