--- a/src/components/InputPasswordLogin/style.module.scss
+++ b/src/components/InputPasswordLogin/style.module.scss
@@ -8,7 +8,7 @@
     font-family: var(--font-primary);
     padding: 0 16px;
     height: 3rem;
-    font-size: 1.0156rem;
+    font-size: clamp(0.5rem, 4vw, 1rem);
     font-weight: 400;
     color: var(--grey-0);
     background-color: var(--grey-2);
@@ -17,6 +17,7 @@
 
     &::placeholder {
       color: var(--grey-1);
+      font-size: clamp(0.5rem, 4vw, 1rem);
     }
 
     &:disabled {
@@ -24,7 +25,7 @@
     }
   }
   button {
-    font-size: 1.5rem;
+    font-size: clamp(1.1rem, 4vw, 1.5rem);
     top: 1.55rem;
     right: 22.4px;
     position: absolute;
