--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -5,6 +5,10 @@
   justify-content: center;
   gap: 10px;
 
+  img {
+    max-width: 140px;
+  }
+
   .formBox {
     background-color: var(--grey-3);
     border-radius: 4px;
@@ -12,6 +16,13 @@
     padding: 42px 22px;
 
     h3 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-top: 20px;
+      margin-bottom: 14px;
       text-align: center;
     }
   }
