--- a/src/components/InputPasswordLogin/style.module.scss
+++ b/src/components/InputPasswordLogin/style.module.scss
@@ -4,6 +4,7 @@
   }
   input {
     margin-top: 11px;
+    margin-bottom: 11px;
     width: 100%;
     font-family: var(--font-primary);
     padding: 0 16px;
