--- a/src/components/Inputs/style.module.scss
+++ b/src/components/Inputs/style.module.scss
@@ -1,6 +1,7 @@
 .inputBox {
   input {
     margin-top: 11px;
+    margin-bottom: 11px;
     width: 100%;
     font-family: var(--font-primary);
     padding: 0 16px;
