--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -29,3 +29,10 @@ select {
   background: transparent;
   border: none;
 }
+
+textarea:focus,
+input:focus,
+select:focus {
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
