--- a/src/components/InputPasswordLogin/style.module.scss
+++ b/src/components/InputPasswordLogin/style.module.scss
@@ -24,6 +24,10 @@
     &:disabled {
       opacity: 0.5;
     }
+
+    &:focus {
+      border: 1px solid var(--grey-0);
+    }
   }
   button {
     font-size: clamp(1.1rem, 4vw, 1.5rem);
@@ -31,5 +35,9 @@
     right: 22.4px;
     position: absolute;
     color: var(--grey-1);
+  }
+
+  .validationWarning {
+    display: flex;
   }
 }
