--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -23,3 +23,10 @@
     font-size: clamp(0.5625rem, 4vw, 0.75rem);
   }
 }
+
+.dashboard {
+  font-family: var(--font-primary);
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ffff;
+}
