--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -18,6 +18,10 @@
   color: var(--grey-1);
   font-weight: 400;
 
+  &.failed {
+    color: #eb5757;
+  }
+
   &.bolder {
     font-weight: 600;
     font-size: clamp(0.5625rem, 4vw, 0.75rem);
