--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -82,3 +82,19 @@
     }
   }
 }
+
+.icon {
+  width: 20px;
+  height: 20px;
+  animation: spin infinite linear 2s;
+  color: var(--color-primary);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
