--- a/src/pages/Dashboard/style.module.scss
+++ b/src/pages/Dashboard/style.module.scss
@@ -6,7 +6,13 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    position: relative;
 
+    .user {
+      position: absolute;
+      top: 2px;
+      left: 130px;
+    }
     @media (min-width: 500px) {
       flex-direction: row;
       align-items: center;
