--- a/src/components/KenzieHubSection/style.module.scss
+++ b/src/components/KenzieHubSection/style.module.scss
@@ -1,6 +1,5 @@
 .section {
-  margin-top: 25px;
-  padding: clamp(0.8rem, 4vw, 1.8rem);
+  padding: clamp(0.8rem, 4vw, 28.8px);
 
   .flexbox {
     display: flex;
