--- a/src/components/TechCard/TechList/style.module.scss
+++ b/src/components/TechCard/TechList/style.module.scss
@@ -2,35 +2,49 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   gap: 20px;
-  padding: 20px 0;
-
-  .techName {
-    border: 1px solid red;
-  }
+  padding: 20px 12px;
+  background-color: var(--grey-4);
+  border-radius: 4px;
+  margin-bottom: 20px;
 
   @media (max-width: 500px) {
     flex-direction: column;
     align-items: flex-start;
   }
 
-  @media (min-width: 1024px) {
-  }
+  // .techName {
+  //   border: 1px solid red;
+  // }
 
   .techIcons {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 15px;
-    width: 100%;
     justify-content: space-between;
+  }
 
-    .icons {
-      max-width: 98px;
+  .icons {
+    gap: 20px;
+    display: flex;
+
+    @media (max-width: 500px) {
       display: flex;
-      width: 15%;
+      align-items: center;
       justify-content: space-between;
+    }
+    .iconsCard {
+      display: flex;
+      gap: 20px;
+
+      @media (max-width: 500px) {
+        // display: flex;
+        // align-items: center;
+        // justify-content: space-between;
+      }
+
+      // width: 200px;
     }
   }
 }
