--- a/src/components/TechCard/style.module.scss
+++ b/src/components/TechCard/style.module.scss
@@ -1,3 +1,7 @@
 .techList {
   margin-top: 40px;
+  width: 100%;
+  background-color: var(--grey-3);
+  padding: 30px 20px;
+  border-radius: 4px;
 }
