--- a/src/components/EditTechModal/style.module.scss
+++ b/src/components/EditTechModal/style.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.3);
+  animation: modalAnimation 0.2s;
 
   .modalBox {
     display: flex;
@@ -40,5 +41,17 @@
       justify-content: space-between;
       flex-direction: row;
     }
+  }
+}
+
+@keyframes modalAnimation {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
