--- a/src/components/TechCard/style.module.scss
+++ b/src/components/TechCard/style.module.scss
@@ -5,3 +5,10 @@
   padding: 30px 20px;
   border-radius: 4px;
 }
+
+.emptyTech {
+  font-size: clamp(1rem, 4vw, 1.4rem);
+  margin-top: 45px;
+  color: var(--grey-0);
+  text-align: center;
+}
